alignment solved

--- a/css/style.css
+++ b/css/style.css
@@ -960,3 +960,9 @@ td.vam{
 .product-bg{
 	background-color: #F6F7F7!important;
 }
+.height-space1{
+	margin-top: 20px!important;
+}
+.height-space2{
+	margin-top: 70px!important;
+}
